@@ -3,8 +3,8 @@ package de.medizininformatik_initiative.process.report.service;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Supplier;
+import java.util.regex.Pattern;
 
-import org.camunda.bpm.engine.delegate.DelegateExecution;
 import org.hl7.fhir.r4.model.BooleanType;
 import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Endpoint;
@@ -14,58 +14,76 @@ import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.Task;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.InitializingBean;
 
 import de.medizininformatik_initiative.process.report.ConstantsReport;
 import de.medizininformatik_initiative.processes.common.util.ConstantsBase;
-import dev.dsf.bpe.v1.ProcessPluginApi;
-import dev.dsf.bpe.v1.activity.AbstractServiceDelegate;
-import dev.dsf.bpe.v1.constants.NamingSystems;
-import dev.dsf.bpe.v1.variables.Target;
-import dev.dsf.bpe.v1.variables.Variables;
+import dev.dsf.bpe.v2.ProcessPluginApi;
+import dev.dsf.bpe.v2.activity.ServiceTask;
+import dev.dsf.bpe.v2.constants.CodeSystems;
+import dev.dsf.bpe.v2.constants.NamingSystems;
+import dev.dsf.bpe.v2.variables.Target;
+import dev.dsf.bpe.v2.variables.Variables;
 
-public class SelectTargetHrp extends AbstractServiceDelegate
+public class SelectTargetHrp implements ServiceTask, InitializingBean
 {
 	private static final Logger logger = LoggerFactory.getLogger(SelectTargetHrp.class);
 
+	private static final String ISO_8601_DURATION_STRING = "^P(?:([0-9]+)Y)?(?:([0-9]+)M)?(?:([0-9]+)D)?(T(?:([0-9]+)H)?(?:([0-9]+)M)?(?:([0-9]+)(?:[.,]([0-9]{0,9}))?S)?)?$";
+	private static final Pattern ISO_8601_DURATION = Pattern.compile(ISO_8601_DURATION_STRING);
+
+	private final String statusTimerInterval;
 	private final String hrpIdentifierEnvVariable;
 
-	public SelectTargetHrp(ProcessPluginApi api, String hrpIdentifierEnvVariable)
+	public SelectTargetHrp(String statusTimerInterval, String hrpIdentifierEnvVariable)
 	{
-		super(api);
+		this.statusTimerInterval = statusTimerInterval;
 		this.hrpIdentifierEnvVariable = hrpIdentifierEnvVariable;
 	}
 
 	@Override
-	protected void doExecute(DelegateExecution execution, Variables variables)
+	public void afterPropertiesSet() throws Exception
 	{
-		Task startTask = variables.getStartTask();
+		if (!ISO_8601_DURATION.matcher(statusTimerInterval).matches())
+			throw new IllegalArgumentException(
+					"statusTimerInterval '" + statusTimerInterval + "' not in ISO 8601 time duration format");
+	}
 
-		Identifier parentIdentifier = NamingSystems.OrganizationIdentifier.withValue(
+	@Override
+	public void execute(ProcessPluginApi api, Variables variables)
+	{
+		variables.setString(ConstantsReport.BPMN_EXECUTION_VARIABLE_STATUS_TIMER_INTERVAL, statusTimerInterval);
+
+		Task task = variables.getStartTask();
+		Identifier consortiumIdentifier = NamingSystems.OrganizationIdentifier.withValue(
 				ConstantsBase.NAMINGSYSTEM_DSF_ORGANIZATION_IDENTIFIER_MEDICAL_INFORMATICS_INITIATIVE_CONSORTIUM);
-		Coding hrpRole = new Coding().setSystem(ConstantsBase.CODESYSTEM_DSF_ORGANIZATION_ROLE)
-				.setCode(ConstantsBase.CODESYSTEM_DSF_ORGANIZATION_ROLE_VALUE_HRP);
+		Coding hrpRole = CodeSystems.OrganizationRole.hrp();
 
 		// 1. use hrp-identifier provided from task, if not present
 		// 2. use hrp-identifier provided from ENV variable, if not present
 		// 3. search hrp-identifier for mii-parent-organization and use first found
-		String hrpIdentifier = extractHrpIdentifierFromTask(startTask)
+		String hrpIdentifier = extractHrpIdentifierFromTask(api, task)
 				.or(extractHrpIdentifierFromEnv(hrpIdentifierEnvVariable))
-				.orElse(searchHrpIdentifier(parentIdentifier, hrpRole, startTask));
+				.orElse(searchHrpIdentifier(api, consortiumIdentifier, hrpRole, task));
 
-		Endpoint endpoint = getHrpEndpoint(parentIdentifier, hrpIdentifier, hrpRole);
+		Endpoint endpoint = getHrpEndpoint(api, consortiumIdentifier, hrpIdentifier, hrpRole);
 		String endpointIdentifier = extractEndpointIdentifier(endpoint);
 
 		Target target = variables.createTarget(hrpIdentifier, endpointIdentifier, endpoint.getAddress());
 		variables.setTarget(target);
 
-		boolean isDryRun = isDryRun(variables);
+		boolean isDryRun = isDryRun(api, variables);
 		if (isDryRun)
-			logger.info("Creating new report as dry-run for HRP '{}'", hrpIdentifier);
+			logger.info("Creating new report as dry-run for HRP '{}' in Task '{}'", hrpIdentifier,
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
+		else
+			logger.info("Executing report for HRP '{}' with status timer interval '{}' in Task '{}'", hrpIdentifier,
+					statusTimerInterval, api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
 
 		variables.setBoolean(ConstantsReport.BPMN_EXECUTION_VARIABLE_IS_DRY_RUN, isDryRun);
 	}
 
-	private Optional<String> extractHrpIdentifierFromTask(Task task)
+	private Optional<String> extractHrpIdentifierFromTask(ProcessPluginApi api, Task task)
 	{
 		Optional<String> hrpIdentifier = api.getTaskHelper()
 				.getFirstInputParameterValue(task, ConstantsReport.CODESYSTEM_REPORT,
@@ -73,8 +91,8 @@ public class SelectTargetHrp extends AbstractServiceDelegate
 				.filter(Reference::hasIdentifier).map(Reference::getIdentifier)
 				.filter(i -> NamingSystems.OrganizationIdentifier.SID.equals(i.getSystem())).map(Identifier::getValue);
 
-		hrpIdentifier.ifPresent(
-				hrp -> logger.info("Using HRP '{}' from Task with id '{}' as report target", hrp, task.getId()));
+		hrpIdentifier.ifPresent(hrp -> logger.info("Using HRP '{}' from Task '{}' as report target", hrp,
+				api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task)));
 
 		return hrpIdentifier;
 	}
@@ -93,58 +111,59 @@ public class SelectTargetHrp extends AbstractServiceDelegate
 		};
 	}
 
-	private String searchHrpIdentifier(Identifier parentIdentifier, Coding hrpRole, Task task)
+	private String searchHrpIdentifier(ProcessPluginApi api, Identifier consortiumIdentifier, Coding hrpRole, Task task)
 	{
-		logger.debug(
-				"HRP not defined in Task with id '{}' or ENV variable - searching HRP for mii-consortium as report target",
-				task.getId());
+		logger.info("HRP not defined in Task '{}' or ENV variable{}searching HRP for mii-consortium as report target",
+				api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task), ConstantsBase.EXCEPTION_MESSAGE_DIVIDER);
 
-		Organization organization = getHrpOrganization(parentIdentifier, hrpRole);
+		Organization organization = getHrpOrganization(api, consortiumIdentifier, hrpRole, task);
 		return extractHrpIdentifierFromOrganization(organization);
 	}
 
-	private Organization getHrpOrganization(Identifier parentIdentifier, Coding role)
+	private Organization getHrpOrganization(ProcessPluginApi api, Identifier parentIdentifier, Coding role, Task task)
 	{
 		List<Organization> hrps = api.getOrganizationProvider().getOrganizations(parentIdentifier, role);
 
-		if (hrps.size() < 1)
+		if (hrps.isEmpty())
 			throw new RuntimeException("Could not find any organization with role '" + role.getCode()
 					+ "' and parent organization '" + parentIdentifier.getValue() + "'");
 
 		if (hrps.size() > 1)
 			logger.warn(
-					"Found more than 1 ({}) organization with role '{}' and parent organization '{}', using the first ('{}')",
+					"Found more than 1 ({}) organization with role '{}' and parent organization '{}', using the first ('{}') for Task '{}'",
 					hrps.size(), role.getCode(), parentIdentifier.getValue(),
-					hrps.get(0).getIdentifierFirstRep().getValue());
+					hrps.getFirst().getIdentifierFirstRep().getValue(),
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
 
-		return hrps.get(0);
+		return hrps.getFirst();
 	}
 
 	private String extractHrpIdentifierFromOrganization(Organization organization)
 	{
 		return NamingSystems.OrganizationIdentifier.findFirst(organization)
-				.orElseThrow(() -> new RuntimeException("organization with id '" + organization.getId()
-						+ "' is missing identifier with system '" + NamingSystems.OrganizationIdentifier.SID + "'"))
+				.orElseThrow(() -> new RuntimeException("organization '" + organization.getId()
+						+ "' is missing identifier.system '" + NamingSystems.OrganizationIdentifier.SID + "'"))
 				.getValue();
 	}
 
-	private Endpoint getHrpEndpoint(Identifier parentIdentifier, String organizationIdentifierValue, Coding role)
+	private Endpoint getHrpEndpoint(ProcessPluginApi api, Identifier parentIdentifier,
+			String organizationIdentifierValue, Coding role)
 	{
 		Identifier organizationIdentifier = NamingSystems.OrganizationIdentifier.withValue(organizationIdentifierValue);
 		return api.getEndpointProvider().getEndpoint(parentIdentifier, organizationIdentifier, role)
-				.orElseThrow(() -> new RuntimeException("Could not find any endpoint of '" + role.getCode()
-						+ "' with identifier '" + organizationIdentifier.getValue() + "'"));
+				.orElseThrow(() -> new RuntimeException("Could not find any Endpoint for organization '"
+						+ organizationIdentifier.getValue() + "' and role " + role.getCode() + " '"));
 	}
 
 	private String extractEndpointIdentifier(Endpoint endpoint)
 	{
 		return endpoint.getIdentifier().stream().filter(i -> NamingSystems.EndpointIdentifier.SID.equals(i.getSystem()))
 				.map(Identifier::getValue).findFirst()
-				.orElseThrow(() -> new RuntimeException("Endpoint with id '" + endpoint.getId()
-						+ "' is missing identifier with system '" + NamingSystems.EndpointIdentifier.SID + "'"));
+				.orElseThrow(() -> new RuntimeException("Endpoint '" + endpoint.getId()
+						+ "' is missing identifier.system '" + NamingSystems.EndpointIdentifier.SID + "'"));
 	}
 
-	private boolean isDryRun(Variables variables)
+	private boolean isDryRun(ProcessPluginApi api, Variables variables)
 	{
 		return api.getTaskHelper()
 				.getFirstInputParameterValue(variables.getStartTask(), ConstantsReport.CODESYSTEM_REPORT,
